# RoboticMobile-2025-2026

./: .gitignore  suivi.md
code/: Makefile
code/code-robmob/: Cargo.toml  asserv_rpicam.cpp  asserv_rpicam.rs  encoder.c  encoder_asservpi.c  encoder_asservpi.cpp  encoder_asservpi.rs  encoder_wiringpi.c  encoder_wiringpi.cpp  moteur.c  teleop.cpp  teleop_aimant.cpp
