[package]
name = "encoder_asservpi"
version = "0.1.0"
edition = "2021"

[features]
default = ["virtual"]
virtual = []
rpi = ["dep:rppal"]

[dependencies]
ctrlc = "3"
rppal = { version = "0.22.1", optional = true }
opencv = { version = "0.98.2", default-features = false, features = [
    "highgui",
    "imgproc",
    "videoio",
    "clang-runtime",
] }

[[bin]]
name = "encoder_asservpi"
path = "encoder_asservpi.rs"

[[bin]]
name = "asserv_rpicam"
path = "asserv_rpicam.rs"
